render/tests/snapshots/effects__snap_sector_band_all_three.snap
---
source: render/tests/effects.rs
expression: "snap(State\n{\n    flag: Flag::None, session: Session::Racing, sectors:\n    SectorMask::from_bits(0b111), ..State::default()\n}, 0, 100,)"
---
.                              .
                                
                                
                                
                                
                                
                                
                                
                                
                                
                                
                                
                                
                                
                                
                                
                                
                                
                                
                                
                                
                                
                                
                                
                                
                                
                                
                                
                                
                                
YYYYYYYYYY YYYYYYYYYY YYYYYYYYYY
YYYYYYYYYY YYYYYYYYYY YYYYYYYYYY
