render/tests/snapshots/effects__snap_sector_band_s2.snap
---
source: render/tests/effects.rs
expression: "snap(State\n{\n    flag: Flag::None, session: Session::Racing, sectors:\n    SectorMask::from_bits(0b010), ..State::default()\n}, 0, 100,)"
---
.                              .
                                
                                
                                
                                
                                
                                
                                
                                
                                
                                
                                
                                
                                
                                
                                
                                
                                
                                
                                
                                
                                
                                
                                
                                
                                
                                
                                
                                
                                
yyyyyyyyyy YYYYYYYYYY yyyyyyyyyy
yyyyyyyyyy YYYYYYYYYY yyyyyyyyyy
