render/tests/snapshots/effects__snap_yellow_double_wave.snap
---
source: render/tests/effects.rs
expression: "snap(State\n{ flag: Flag::Yellow, wave: WaveLevel::Double, ..State::default() }, 0, 100,)"
---
YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY
YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY 
YYYYYYYYYYYYYYYYYYYYYYYYYYYYYY  
YYYYYYYYYYYYYYYYYYYYYYYYYYYYY   
YYYYYYYYYYYYYYYYYYYYYYYYYYYY    
YYYYYYYYYYYYYYYYYYYYYYYYYYY     
YYYYYYYYYYYYYYYYYYYYYYYYYY      
YYYYYYYYYYYYYYYYYYYYYYYYY       
YYYYYYYYYYYYYYYYYYYYYYYY        
YYYYYYYYYYYYYYYYYYYYYYY         
YYYYYYYYYYYYYYYYYYYYYY          
YYYYYYYYYYYYYYYYYYYYY           
YYYYYYYYYYYYYYYYYYYY            
YYYYYYYYYYYYYYYYYYY             
YYYYYYYYYYYYYYYYYY              
YYYYYYYYYYYYYYYYY               
YYYYYYYYYYYYYYYY                
YYYYYYYYYYYYYYY                 
YYYYYYYYYYYYYY                  
YYYYYYYYYYYYY                   
YYYYYYYYYYYY                    
YYYYYYYYYYY                     
YYYYYYYYYY                      
YYYYYYYYY                       
YYYYYYYY                        
YYYYYYY                         
YYYYYY                          
YYYYY                           
YYYY                            
YYY                             
YY                              
Y
